--- a/CSS/class2_flex.html
+++ b/CSS/class2_flex.html
@@ -15,6 +15,7 @@
     .container {
       background-color: darkgray;
       display: flex;
+      /*used in parent  */
       flex-wrap: wrap;
       justify-content: space-evenly;
       /* space-around, center, start,end 
