--- a/CSS/index.html
+++ b/CSS/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="index.css">
   <!-- Internal CSS -->
   <style>
-
+    h1 {
+      color: darkgoldenrod;
+      font-size: 50px;
+    }
   </style>
 </head>
 <h1>Types of CSS</h1>
