--- a/CSS/class3_position_fixedandsticky.html
+++ b/CSS/class3_position_fixedandsticky.html
@@ -18,24 +18,113 @@
       text-align: center;
       font-size: 40px;
       padding: 30px;
+      z-index: 10;
     }
 
     nav {
       height: 100px;
       background-color: darkgoldenrod;
       text-align: center;
-      font-size: 40px;
-      padding: 30px;
+      padding: 0 40px;
       position: sticky;
       top: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
     }
 
-    main {
-      height: 800px;
-      background-color: darkkhaki;
+    ul {
+      list-style-type: none;
+      display: flex;
+    }
+
+    li a {
+      text-decoration: none;
+      color: white;
+      font-size: 20px;
+      margin-left: 20px;
+      text-shadow: 5px -2px 10px black;
+    }
+
+    .imageslider {
+      width: 100%;
+      height: 500px;
+      position: relative;
+
+    }
+
+    .imageslider img {
+      width: 100%;
+      height: 500px;
+    }
+
+    .left {
+      font-size: 50px;
+      border: none;
+      background: transparent;
+      color: white;
+      position: absolute;
+      top: 40%;
+      left: 20px;
+    }
+
+    .right {
+      font-size: 50px;
+      border: none;
+      background: transparent;
+      color: white;
+      position: absolute;
+      top: 40%;
+      right: 20px;
+    }
+
+    /* card-section */
+    .card {
+
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin: 10px 20px;
+    }
+
+    .card-section {
+      width: 300px;
+      height: 300px;
+      background-color: darkcyan;
+      box-shadow: -1px -1px 3px black;
+    }
+
+    .card-image {
+      width: 300px;
+      height: 150px;
+    }
+
+    .card-image img {
+      width: 100%;
+      height: 100%;
+    }
+
+    .card-content {
       text-align: center;
-      font-size: 40px;
-      padding: 30px;
+      padding: 10px;
+      color: white;
+    }
+
+    .card-content h3 {
+      margin-top: 10px;
+    }
+
+    .view {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: darkgreen;
+      color: white;
+      border: none;
+      font-weight: 700;
+      border-radius: 10px;
+
     }
 
     footer {
@@ -46,7 +135,7 @@
       padding: 30px;
     }
 
-    button {
+    .fixed {
       width: 100px;
       height: 50px;
       background-color: darkred;
@@ -67,15 +156,97 @@
     <p>This is a header seccion.</p>
   </header>
   <nav>
-    <p>This is a nav section.</p>
+    <img
+      src="https://marketplace.canva.com/EAFvDRwEHHg/1/0/1600w/canva-colorful-abstract-online-shop-free-logo-cpI8ixEpis8.jpg"
+      alt="" width="50px" height="50px">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+    </ul>
   </nav>
   <main>
-    <p>This is a body section</p>
+    <section class="imageslider">
+      <img src="image/keyboard.avif" alt="image">
+      <button class="left">&lt;</button>
+      <button class="right">&gt;</button>
+    </section>
+    <section class="card">
+      <div class="card-section">
+        <div class="card-image">
+          <img src="image/apple.jpg" alt="laptop">
+        </div>
+        <div class="card-content">
+          <h1>Mac Laptop</h1>
+          <h3>Rs 1200000</h3>
+          <button class="view">View Detail</button>
+        </div>
+      </div>
+
+      <div class="card-section">
+        <div class="card-image">
+          <img src="image/apple.jpg" alt="laptop">
+        </div>
+        <div class="card-content">
+          <h1>Mac Laptop</h1>
+          <h3>Rs 1200000</h3>
+          <button class="view">View Detail</button>
+        </div>
+      </div>
+
+      <div class="card-section">
+        <div class="card-image">
+          <img src="image/apple.jpg" alt="laptop">
+        </div>
+        <div class="card-content">
+          <h1>Mac Laptop</h1>
+          <h3>Rs 1200000</h3>
+          <button class="view">View Detail</button>
+        </div>
+      </div>
+
+      <div class="card-section">
+        <div class="card-image">
+          <img src="image/apple.jpg" alt="laptop">
+        </div>
+        <div class="card-content">
+          <h1>Mac Laptop</h1>
+          <h3>Rs 1200000</h3>
+          <button class="view">View Detail</button>
+        </div>
+      </div>
+
+      <div class="card-section">
+        <div class="card-image">
+          <img src="image/apple.jpg" alt="laptop">
+        </div>
+        <div class="card-content">
+          <h1>Mac Laptop</h1>
+          <h3>Rs 1200000</h3>
+          <button class="view">View Detail</button>
+        </div>
+      </div>
+
+      <div class="card-section">
+        <div class="card-image">
+          <img src="image/apple.jpg" alt="laptop">
+        </div>
+        <div class="card-content">
+          <h1>Mac Laptop</h1>
+          <h3>Rs 1200000</h3>
+          <button class="view">View Detail</button>
+        </div>
+      </div>
+
+
+    </section>
   </main>
   <footer>
     <p>This is a footer section.</p>
   </footer>
-  <button>
+  <button class="fixed">
     Message me
   </button>
 </body>
