--- a/CSS/class3_position_fixedandsticky.html
+++ b/CSS/class3_position_fixedandsticky.html
@@ -5,160 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fixed and Sticky Position</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    header {
-      height: 300px;
-      background-color: darkcyan;
-      text-align: center;
-      font-size: 40px;
-      padding: 30px;
-      z-index: 10;
-    }
-
-    nav {
-      height: 100px;
-      background-color: darkgoldenrod;
-      text-align: center;
-      padding: 0 40px;
-      position: sticky;
-      top: 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-    }
-
-    ul {
-      list-style-type: none;
-      display: flex;
-    }
-
-    li a {
-      text-decoration: none;
-      color: white;
-      font-size: 20px;
-      margin-left: 20px;
-      text-shadow: 5px -2px 10px black;
-    }
-
-    .imageslider {
-      width: 100%;
-      height: 500px;
-      position: relative;
-
-    }
-
-    .imageslider img {
-      width: 100%;
-      height: 500px;
-    }
-
-    .left {
-      font-size: 50px;
-      border: none;
-      background: transparent;
-      color: white;
-      position: absolute;
-      top: 40%;
-      left: 20px;
-    }
-
-    .right {
-      font-size: 50px;
-      border: none;
-      background: transparent;
-      color: white;
-      position: absolute;
-      top: 40%;
-      right: 20px;
-    }
-
-    /* card-section */
-    .card {
-
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin: 10px 20px;
-    }
-
-    .card-section {
-      width: 300px;
-      height: 300px;
-      background-color: darkcyan;
-      box-shadow: -1px -1px 3px black;
-    }
-
-    .card-image {
-      width: 300px;
-      height: 150px;
-    }
-
-    .card-image img {
-      width: 100%;
-      height: 100%;
-    }
-
-    .card-content {
-      text-align: center;
-      padding: 10px;
-      color: white;
-    }
-
-    .card-content h3 {
-      margin-top: 10px;
-    }
-
-    .view {
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: darkgreen;
-      color: white;
-      border: none;
-      font-weight: 700;
-      border-radius: 10px;
-
-    }
-
-    footer {
-      height: 300px;
-      background-color: darkgoldenrod;
-      text-align: center;
-      font-size: 40px;
-      padding: 30px;
-    }
-
-    .fixed {
-      width: 100px;
-      height: 50px;
-      background-color: darkred;
-      color: white;
-      font-weight: 900;
-      border: none;
-      border-radius: 10px;
-      position: fixed;
-      right: 10px;
-      bottom: 10px;
-
-    }
-  </style>
+  <link rel="stylesheet" href="class3_position_fixedandsticky.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
   <header>
-    <p>This is a header seccion.</p>
+    <p>This is a header section.</p>
   </header>
   <nav>
-    <img
+    <i class="fad fa-crown"></i>
+    <!-- <img
       src="https://marketplace.canva.com/EAFvDRwEHHg/1/0/1600w/canva-colorful-abstract-online-shop-free-logo-cpI8ixEpis8.jpg"
-      alt="" width="50px" height="50px">
+      alt="" width="50px" height="50px"> -->
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Home</a></li>
@@ -239,7 +99,6 @@
           <button class="view">View Detail</button>
         </div>
       </div>
-
 
     </section>
   </main>
