--- a/CSS/class3_position.html
+++ b/CSS/class3_position.html
@@ -43,17 +43,22 @@
       i> Static Position=default
       ii> Relative Position=moves according to its position
       iii> Absolute Position=moves according to body or parents position
-      iv> Fixed position
-      v> Sticky Position
+      iv> Fixed position = fixed on defined position
+      v> Sticky Position= stick when it is reached to certain position
      </pre>
   <div class="container">
     <div class="box"></div>
     <div class="demo"></div>
   </div>
 
+  <div class="practice">
+    <div class="pra1"></div>
+    <div class="pra2"></div>
+  </div>
+
 
   <!-- TasK: card  search box -->
-   
+
 </body>
 
 </html>
