--- a/CSS/class3_position_fixedandsticky.html
+++ b/CSS/class3_position_fixedandsticky.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="class3_position_fixedandsticky.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <style>
+
+  </style>
 </head>
 
 <body>
@@ -15,10 +18,8 @@
     <p>This is a header section.</p>
   </header>
   <nav>
-    <i class="fad fa-crown"></i>
-    <!-- <img
-      src="https://marketplace.canva.com/EAFvDRwEHHg/1/0/1600w/canva-colorful-abstract-online-shop-free-logo-cpI8ixEpis8.jpg"
-      alt="" width="50px" height="50px"> -->
+    <!-- <i class="fad fa-crown"></i> -->
+
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Home</a></li>
@@ -26,6 +27,13 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Home</a></li>
     </ul>
+    <img
+      src="https://marketplace.canva.com/EAFvDRwEHHg/1/0/1600w/canva-colorful-abstract-online-shop-free-logo-cpI8ixEpis8.jpg"
+      alt="" width="50px" height="50px">
+    <div class="log-icon">
+      <i class="fas fa-sign-in"></i>
+      <i class="fas fa-sign-out"></i>
+    </div>
   </nav>
   <main>
     <section class="imageslider">
