--- a/CSS/class3_position_fixedandsticky.html
+++ b/CSS/class3_position_fixedandsticky.html
@@ -8,9 +8,7 @@
   <link rel="stylesheet" href="class3_position_fixedandsticky.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <style>
 
-  </style>
 </head>
 
 <body>
@@ -30,6 +28,9 @@
     <img
       src="https://marketplace.canva.com/EAFvDRwEHHg/1/0/1600w/canva-colorful-abstract-online-shop-free-logo-cpI8ixEpis8.jpg"
       alt="" width="50px" height="50px">
+
+    <input type="search" id="search" placeholder="Search here">
+
     <div class="log-icon">
       <i class="fas fa-sign-in"></i>
       <i class="fas fa-sign-out"></i>
