--- a/CSS/class8_dropdown.html
+++ b/CSS/class8_dropdown.html
@@ -22,12 +22,14 @@
     }
 
     ul {
+
       list-style-type: none;
     }
 
     ul li {
       display: inline-block;
       padding: 20px;
+      position: relative;
 
     }
 
@@ -44,6 +46,36 @@
     .dropdown {
       position: absolute;
       background-color: darkcyan;
+      top: 57px;
+      right: 0;
+      width: 100px;
+    }
+
+    .dropdown li {
+      display: none;
+    }
+
+    .menu:hover .dropdown li {
+      display: block;
+    }
+
+    .drop-item {
+      position: relative;
+    }
+
+    .sub-drop {
+      position: absolute;
+      background-color: darkcyan;
+      left: 95px;
+      top: 0;
+    }
+
+    .sub-drop li {
+      display: none !important;
+    }
+
+    .drop-item:hover .sub-drop li {
+      display: block !important;
     }
   </style>
 
