--- a/BootStrap/day2_position.html
+++ b/BootStrap/day2_position.html
@@ -32,6 +32,11 @@
       top: -20px;
       left: 120px;
     }
+
+    .demo img {
+      height: 100%;
+      width: 100%;
+    }
   </style>
 
 </head>
@@ -42,8 +47,9 @@
 
   <div class="feedback container-fluid m-5 position-relative">
     <div class="box bg-warning">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quas earum dicta eveniet sequi, numquam quam,
-        accusamus saepe rerum optio iure quae error commodi, animi aliquid assumenda quos sunt dignissimos.</p>
+      <p class="pt-5 ps-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quas earum dicta eveniet
+        sequi, numquam quam, accusamus saepe rerum optio iure quae error commodi, animi aliquid assumenda quos sunt
+        dignissimos.</p>
 
       <input type="submit" value="Submit" class="btn btn-success">
 
