--- a/Tailwind/day1_index.html
+++ b/Tailwind/day1_index.html
@@ -9,21 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <!-- tailwind css link -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            primary: '#a93226 ',
-          },
-          height: {
-            '100': '400',
-          }
-        }
-      }
-    }
-  </script>
+
 
 </head>
 
@@ -71,12 +57,162 @@
     <div class="box-color bg-gray-300 opacity-50 absolute top-0 right-0 bottom-0  left-0"></div>
     <i class="bi bi-arrow-left-circle-fill text-4xl absolute top-1/2 left-5 text-primary"></i>
     <i class="bi bi-arrow-right-circle-fill text-4xl absolute top-1/2 right-5 text-primary"></i>
-    <!-- <p class="absolute text-green-700 text-3xl bottom-80 left-80 font-bold ">Ecommerce Business
-    </p>
-    <h1 class="absolute text-red-800 text-6xl bottom-60 left-80 font-bold ">Keep it short and
-      simple</h1> -->
-
   </section>
+
+
+
+  <div class="bg-orange-300 mt-1">
+
+    <div class=" flex flex-wrap justify-evenly py-5 max-w-screen-lg mx-auto">
+
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5  md:w-47 md:bg-green-400  lg:w-23  lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg:w-23  lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg-mt-0 lg:w-23 lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg-mt-0 lg:w-23 lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg:w-23 lg:bg-blue-100 lg:mt-5">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#a93226 ',
+          },
+          height: {
+            '100': '400',
+          },
+          spacing: {
+            '23': '23%',
+            '97': '97%',
+          }
+        }
+      }
+    }
+  </script>
 </body>
 
 </html>
