--- a/Tailwind/day2_responsice.html
+++ b/Tailwind/day2_responsice.html
@@ -18,10 +18,10 @@
 
     <div class=" flex flex-wrap justify-evenly py-5 max-w-screen-lg mx-auto">
 
-      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5  md:w-47 md:bg-green-400  lg:w-23  lg:bg-red-100">
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5  md:w-47 md:bg-green-400  lg:w-23  lg:bg-blue-100">
         <div class="card-img h-32 overflow-hidden">
           <img src="image/keyboard.avif" alt="img"
-            class="w-full h-full object-cover-rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
         </div>
         <div class="card-body  h-32 pt-5 ps-3">
           <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
@@ -45,17 +45,94 @@
 
 
 
-      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg:w-23  lg:bg-red-400">
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg:w-23  lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
+      </div>
 
-      </div>
-      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg-mt-0 lg:w-23 lg:bg-red-400">
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg-mt-0 lg:w-23 lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
       </div>
 
-      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg-mt-0 lg:w-23 lg:bg-red-400">
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg-mt-0 lg:w-23 lg:bg-blue-100">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
       </div>
 
-      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg:w-23 lg:bg-red-400 lg:mt-5">
+      <div class="box w-97 h-72 rounded-lg bg-blue-400 mt-5 md:w-47 md:bg-green-400  lg:w-23 lg:bg-blue-100 lg:mt-5">
+        <div class="card-img h-32 overflow-hidden">
+          <img src="image/keyboard.avif" alt="img"
+            class="w-full h-full rounded-t-lg transistion-transform duration-1000 hover:scale-150">
+        </div>
+        <div class="card-body  h-32 pt-5 ps-3">
+          <h1 class="tex-2xl text-green-500 font-bold ">Dell Laptop</h1>
+          <div class="text-lg text-green-500 font-bold">Rs 120000</div>
+          <div class="icon-section">
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-fill text-yellow-500"></i>
+            <i class="bi bi-star-half text-yellow-500"></i>
+          </div>
+          <div class="w-full mt-2">
+            <button class="bg-blue-500 text-white text-center px-4 py-2 rounded-lg hover:bg-green-500">View
+              Detail</button>
+          </div>
+        </div>
       </div>
+
     </div>
 
   </div>
