--- a/JavaScript/class2_operator.html
+++ b/JavaScript/class2_operator.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Operator in JavaScript</h1>
   <pre>Symbol which is used to perform certain condition.
-    There are 4 types od operations:
+    There are 4 types of operations:
     i>Arithmetic Operator
     ii>Assignment Operator
     iii>Comparison Operator
