--- a/JavaScript/class8_imageslider.html
+++ b/JavaScript/class8_imageslider.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Slider</title>
 
+
+
+
+
   <style>
     * {
       margin: 0;
@@ -58,14 +62,18 @@
 
 <body>
 
+  <nav>
+
+  </nav>
+
   <section class="image-slider">
-    <img src="image/apple.jpg" alt="img">
-    <button></button>
-
-
+    <img src="image/apple.jpg" alt="img" id="slider_img">
+    <button class="left" id="left">&lt;</button>
+    <button class="right" id="right">&gt;</button>
   </section>
 
   <script src="class8_imageslider.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
 </html>
