--- a/JavaScript/class9_arrayiteration.html
+++ b/JavaScript/class9_arrayiteration.html
@@ -62,7 +62,12 @@
     document.write(find_condition, "<br>")
 
 
-    //include
+    //include => returns true if a string contains a specified string.
+    let include_string = "We are students of Full Stack"
+    let include_conditon = include_string.includes("Full")
+    document.write(include_condition, "<br>")
+
+
     //spread
 
   </script>
