--- a/JavaScript/class7_events.html
+++ b/JavaScript/class7_events.html
@@ -10,9 +10,9 @@
 <body>
   <h1>Events</h1>
   <pre>
-    Events are the interaction with web pages.
-    Example:- onclick      onsubmit  onload          onmouseout
-              ondblclick   onload    onmouseover     onkeydown    onkeyup
+    Events are the interaction with the web pages.
+    Event Example:- onclick      onsubmit  onload          onmouseout
+                    ondblclick   onload    onmouseover     onkeydown    onkeyup
   </pre>
 
   <button onclick="demo()" ondblclick="remove()">Click me</button>
